docs(agent-core): SS8.26 — is structured concurrency right for tool calls? (verdict + 3 registrations)
The question "适合使用结构并发来实现工具调用么" already had an answer in the
tree (ToolExecution.java:8, docs/31 §8.23.3) but only one reason and no
citation. §8.26 supplies the chain and shows "preview API" is the WEAKEST of
three independent vetoes:

1. Semantics — the no-arg open() is equivalent to
   Joiner.awaitAllSuccessfulOrThrow() (StructuredTaskScope.java:905-908), whose
   javadoc says it CANCELS the scope if any subtask fails (:613-619); cancel
   means interruptAll() -> t.interrupt() on the sibling worker threads
   (StructuredTaskScopeImpl.java:187-191, :147-153, :134-140). pi's abort is
   cooperative: in-flight calls run to completion and emit their own end.
   Pi-java deliberately does not shutdownNow (PiLoopTools.java:186-188) and
   ToolBatchConcurrencyTest pins it. Also join() wraps in FailedException
   (:258), breaking the deliberate "rethrow verbatim" of awaitOutcome.
2. Build — --enable-preview is release-bound and marks every class file;
   the artifacts are a library + CLI + fat jar + native binary.
3. Native + churn — -Pnative premise is "no --enable-preview"
   (docs/10 §539); 5th preview, finalization proposed for JDK 28.

The principle half is already satisfied by the existing batch: executor scoped
to the batch method, close() waits for all tasks (ExecutorService.java:368-407),
results joined deterministically.

Also registers three real defects found while investigating (§8.26.5, numbering
continues from §8.25.5):
- 11 batchSize is a prefix count on the sequential path (proven from pi's own
  recording, S10.pi.jsonl:11-18) — goes to the pi span-vocabulary package
- 12 batch join is source-ordered and the scope is STRONGER than pi's; the
  Error path also hangs SessionRunner's futures. Register, do not change.
- 13 lane.records is a plain ArrayList written from TOOL threads
  (PiToolRunner:172 -> HookSystem:200 -> :334) and read by host snapshot
  thr